fix :before alignment

--- a/userChrome.css
+++ b/userChrome.css
@@ -14,6 +14,42 @@
   --fg2: #aa9e7a;
   --fg3: #80775d;
   --fg4: #635945;
+  --lwt-accent-color: var(--bg-1)!important;
+  --lwt-text-color: #D4BE98!important;
+  --arrowpanel-background: #161616!important;
+  --arrowpanel-color: #D4BE98!important;
+  --arrowpanel-border-color: #161616!important;
+  --toolbar-field-background-color: #161616!important;
+  --toolbar-bgcolor: #101010!important;
+  --toolbar-color: #D4BE98!important;
+  --toolbar-field-color: #D4BE98!important;
+  --toolbar-field-border-color: #101010!important;
+  --toolbar-field-focus-background-color: #161616!important;
+  --toolbar-field-focus-color: #D4BE98!important;
+  --toolbar-field-focus-border-color: #101010!important;
+  --lwt-toolbar-field-highlight: #D4BE98!important;
+  --lwt-toolbar-field-highlight-text: #101010!important;
+  --newtab-background-color: #101010!important;
+  --newtab-text-primary-color: #D4BE98!important;
+  --lwt-accent-color-inactive: #101010!important;
+  --lwt-background-alignment: top!important;
+  --lwt-background-tiling: repeat!important;
+  --tab-loading-fill: #D4BE98!important;
+  --tab-selected-bgcolor: #161616!important;
+  --tab-selected-textcolor: #D4BE98!important;
+  --lwt-tab-line-color: #161616!important;
+  --lwt-background-tab-separator-color: #101010!important;
+  --tabs-navbar-separator-color: #101010!important;
+  --toolbarseparator-color: #101010!important;
+  --chrome-content-separator-color: #101010!important;
+  --toolbarbutton-icon-fill: #D4BE98!important;
+  --lwt-toolbarbutton-icon-fill-attention: #D4BE98!important;
+  --toolbarbutton-hover-background: #161616!important;
+  --toolbarbutton-active-background: #161616!important;
+  --urlbarView-highlight-background: #202020!important;
+  --urlbarView-highlight-color: #D4BE98!important;
+  --sidebar-background-color: #101010!important;
+  --sidebar-border-color: #161616!important;
 }
 
 toolbar#nav-bar {
@@ -243,7 +279,7 @@ fill: currentColor !important; -moz-context-properties: fill !important; list-st
   background-color: var(--bg1);
   position: absolute;
   color: var(--fg4);
-  margin: -18px 4px;
+  margin: -17px 4px;
   padding: 0 4px;
   z-index: 2;
   font-size: 14px;
@@ -258,7 +294,7 @@ fill: currentColor !important; -moz-context-properties: fill !important; list-st
   background-color: var(--bg1);
   position: absolute;
   color: var(--fg4);
-  margin: -18px 4px;
+  margin: -17px 4px;
   padding: 0 4px;
   z-index: 2;
   font-size: 14px;
@@ -284,7 +320,7 @@ fill: currentColor !important; -moz-context-properties: fill !important; list-st
   background-color: var(--bg1);
   position: absolute;
   color: var(--fg4);
-  margin: -18px 4px;
+  margin: -17px 4px;
   padding: 0 4px;
   z-index: 2;
   font-size: 14px;
